@@ -1,6 +1,7 @@
 FOF 3.1.1
 ================================================================================
 + Controller mixins
++ Model mixins
 
 FOF 3.1.0
 ================================================================================
